{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 80,
  "lineage": "4e4b3c58-cf29-2247-6b5e-fe6016bfee14",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "app_ip",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.76.104.20",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2019-10-05T06:25:33.942-07:00",
            "id": "nostromo-253518/europe-west1/reddit-app-ip",
            "name": "reddit-app-ip",
            "network_tier": "PREMIUM",
            "project": "nostromo-253518",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nostromo-253518/regions/europe-west1/addresses/reddit-app-ip"
          }
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_mongo",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-10-05T06:25:33.874-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-mongo-default",
            "name": "allow-mongo-default",
            "network": "https://www.googleapis.com/compute/v1/projects/nostromo-253518/global/networks/default",
            "priority": 1000,
            "project": "nostromo-253518",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nostromo-253518/global/firewalls/allow-mongo-default",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "reddit-app"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "reddit-db"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_puma",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9292"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-10-05T06:25:34.199-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-puma-default",
            "name": "allow-puma-default",
            "network": "https://www.googleapis.com/compute/v1/projects/nostromo-253518/global/networks/default",
            "priority": 1000,
            "project": "nostromo-253518",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nostromo-253518/global/firewalls/allow-puma-default",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "reddit-app"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-10-05T06:25:34.207-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "default-allow-ssh",
            "name": "default-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/nostromo-253518/global/networks/default",
            "priority": 1000,
            "project": "nostromo-253518",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nostromo-253518/global/firewalls/default-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/nostromo-253518/global/images/reddit-app-base-1570251754",
                    "size": 12,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/nostromo-253518/zones/europe-west1-b/disks/reddit-app"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "reddit-app",
            "instance_id": "1918600393411340093",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "ssh-keys": "appuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDa9o8dLtgr4iq2jka2TWhgyHsCNKjoaI1sAzO++qymM+pZl2n7Jp6kBZWqQFaU7NO4b5xKASJH8A0buxf+L1kdVHBAaAYJgs1u4KW0gIlzAJers7bv/iSxquHN60eKlQC1CNIYTLxZABQe6oMfxWMaY5zSPA36KNMUWTGwPF7XWB+CWjaPWaJ4WDixbtAiJoLtoeQneMelqmWaZbMpsg5ZVxHeOVJqhX/gL6Q1q+ns41N66nDyoqVqOxBA9BA76Gl+FAzV3GR7rS5oIutzSmiRxvVzQRVRtVgAoaMOvX4sAKTEsTd0bWNR7icWZBc+cgyxhKl9zeFTv8iKOzX4QmXf appuser\n"
            },
            "metadata_fingerprint": "f5KgvfACh1g=",
            "name": "reddit-app",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.76.104.20",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/nostromo-253518/global/networks/default",
                "network_ip": "10.132.15.221",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/nostromo-253518/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "nostromo-253518"
              }
            ],
            "project": "nostromo-253518",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/nostromo-253518/zones/europe-west1-b/instances/reddit-app",
            "tags": [
              "reddit-app"
            ],
            "tags_fingerprint": "M-ggixIz-AU=",
            "zone": "europe-west1-b"
          },
          "depends_on": [
            "google_compute_address.app_ip"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/nostromo-253518/global/images/reddit-db-base-1570252017",
                    "size": 12,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/nostromo-253518/zones/europe-west1-b/disks/reddit-db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "reddit-db",
            "instance_id": "8011720515988563745",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "ssh-keys": "appuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDa9o8dLtgr4iq2jka2TWhgyHsCNKjoaI1sAzO++qymM+pZl2n7Jp6kBZWqQFaU7NO4b5xKASJH8A0buxf+L1kdVHBAaAYJgs1u4KW0gIlzAJers7bv/iSxquHN60eKlQC1CNIYTLxZABQe6oMfxWMaY5zSPA36KNMUWTGwPF7XWB+CWjaPWaJ4WDixbtAiJoLtoeQneMelqmWaZbMpsg5ZVxHeOVJqhX/gL6Q1q+ns41N66nDyoqVqOxBA9BA76Gl+FAzV3GR7rS5oIutzSmiRxvVzQRVRtVgAoaMOvX4sAKTEsTd0bWNR7icWZBc+cgyxhKl9zeFTv8iKOzX4QmXf appuser\n"
            },
            "metadata_fingerprint": "f5KgvfACh1g=",
            "name": "reddit-db",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.199.108.48",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/nostromo-253518/global/networks/default",
                "network_ip": "10.132.15.220",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/nostromo-253518/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "nostromo-253518"
              }
            ],
            "project": "nostromo-253518",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/nostromo-253518/zones/europe-west1-b/instances/reddit-db",
            "tags": [
              "reddit-db"
            ],
            "tags_fingerprint": "NQyRUqL7UTU=",
            "zone": "europe-west1-b"
          }
        }
      ]
    }
  ]
}